# spacy-altair-theme

./: .gitignore  README.md  pyproject.toml
spacy_altair_theme/: __init__.py  themes.py
tests/: star-history-explosion.csv  test_spacy_altair_theme.py
