[tool.poetry]
name = "spacy-altair-theme"
version = "0.1.0"
description = ""
authors = ["Peter Baumgartner"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "<8"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
